--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GenomeMart</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<script src="style.css"></script>
+
 <body>
 
     <main>
         
         <div><img src="\images\medical  equipment.jpg"></div>
-        <div>
+        <div id="sign-in">
             <Header><h1>Welcome to GenomeMart</h1> <br>
             <p>Your digital medical store</p>
             </Header>
